<resources>
    <string name="app_name"> <h1> Curriculum Vitae </h1> </string>
    <string name="name">Gabriel Castro Roveri</string>
    <string name="address"> <b> Endereço:</b> Bairro Swiss Park, Rua Benedicto Jorge, 32, 13049354, Campinas-SP</string>
    <string name="address_about">Bairro Swiss Park, Rua Benedicto Jorge, 32, 13049354, Campinas-SP</string>
    <string name="profile_content">profile</string>
    <string name="home_address" />
    <string name="phone_text">Tel:</string>
    <string name="phone">(19) 988927707</string>
    <string name="relation">Estado Civil:</string>
    <string name="single">Solteiro</string>
    <string name="email">gabriel.roveri7@gmail.com</string>
    <string name="email01">E-Mail:</string>
    <string name="goal">Objetivo</string>
    <string name="goal_text">Busco obter um crescimento profissional na devida empresa, para que eu consiga ajuda-la ainda mais com o seu crescimento. Almejo, como posição inicial, um cargo que possa ser de grande ajuda para a mesma e que ao mesmo tempo, possua relações com as pessoas e/ou com o computador. Procuro estar sempre aprendendo coisas novas, pois o conhecimento é algo de grande valor.</string>
    <string name="education">Educação</string>
    <string name="fatec"> <b> Faculdade de Tecnologia de Americana</b> - Fatec AMR </string>
    <string name="education_about">Cursando Análise e Desenvolvimento de Sistemas</string>
    <string name="fatec_start">Início: 2017</string>
    <string name="fatec_end">Término: 2020</string>
    <string name="bq">Técnico em Informática pelo <b> Colégio Politécnico Bento Quirino </b> </string>
    <string name="bq_start">Início: 2014</string>
    <string name="bq_end">Término: 2016</string>
    <string name="languages">Idiomas</string>
    <string name="english_fisk"> <b> Inglês </b> - Fluente. Educação: Fisk escola de idiomas</string>
    <string name="fisk_start">Início: 2015</string>
    <string name="fisk_end">Término: 2017</string>
    <string name="spanish"> <b> Espanhol </b> - Básico</string>
    <string name="skills">Habilidades e Competências</string>
    <string name="skills01">Sempre disposto a ter mais aprendizado, buscando sempre o favorecimento das pessoas e ajudar no que for preciso;</string>
    <string name="skills02">Conhecimento com linguagens de programação (C, C#, JAVA, HTML, SQL, VBA);</string>
    <string name="skills03">Conhecimento com banco de dados (MySQL, Microsoft Access);</string>
    <string name="skills04">Quando for necessário, há o prazer pela minha pessoa em ensinar alguém de um assunto que possuo um certo domínio.</string>
    <string name="exp">Experiências</string>
    <string name="ta">Monitor de Inglês (do 1º ao 6º semestre) da Faculdade de Tecnologia de Americana – FATEC AM.</string>
    <string name="ta_start">Início: Mar/2018</string>
    <string name="ta_end">Término: Jul/2018</string>
    <string name="dd_mmYY">20/01/1999</string>
    <string name="birthdate">Data de nascimento:</string>
    <string name="btn_hire">Contratar</string>
    <string name="hired">Contratado!</string>
</resources>
