<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="200sp"
            android:layout_height="200sp"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:contentDescription="@string/profile_content"
            android:scaleType="centerCrop"
            android:src="@drawable/profile" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/color_pattern"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3sp"
            android:background="@color/color_pattern"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:text="@string/address"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:text="@string/phone_text"
                android:textColor="@color/color_pattern"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_marginTop="10sp"
                android:autoLink="phone"
                android:text="@string/phone"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:text="@string/relation"
                android:textColor="@color/color_pattern"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_marginTop="10sp"
                android:text="@string/single"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:text="@string/email01"
                android:textColor="@color/color_pattern"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_marginTop="10sp"
                android:autoLink="email"
                android:text="@string/email"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:text="@string/birthdate"
                android:textColor="@color/color_pattern"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_marginTop="10sp"
                android:text="@string/dd_mmYY"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:text="@string/goal"
                android:textColor="@color/color_pattern"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:text="@string/goal_text"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:text="@string/education"
                android:textColor="@color/color_pattern"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="6sp"
                android:text="@string/fatec"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:text="@string/education_about"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:text="@string/fatec_start"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:text="@string/fatec_end"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="15sp"
                android:text="@string/bq"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:text="@string/bq_start"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:text="@string/bq_end"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:text="@string/languages"
                android:textColor="@color/color_pattern"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="6sp"
                android:text="@string/english_fisk"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:text="@string/fisk_start"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:text="@string/fisk_end"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="5sp"
                android:text="@string/spanish"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:text="@string/skills"
                android:textColor="@color/color_pattern"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:text="@string/skills01"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="5sp"
                android:text="@string/skills02"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="5sp"
                android:text="@string/skills03"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="5sp"
                android:text="@string/skills04"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:text="@string/exp"
                android:textColor="@color/color_pattern"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:text="@string/ta"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:text="@string/ta_start"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:text="@string/ta_end"
                android:textColor="@color/color_pattern"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnTest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:text="@string/btn_hire" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>



